--- a/index.html
+++ b/index.html
@@ -232,31 +232,32 @@
               href="#about"
               class="nav-link text-sm tracking-wider hover:text-cyan-400 transition-colors"
               style="font-family: 'Rajdhani', sans-serif"
-              >ABOUT</a
+            >
+              Wer wir sin</a
             >
             <a
               href="#founder"
               class="nav-link text-sm tracking-wider hover:text-pink-400 transition-colors"
               style="font-family: 'Rajdhani', sans-serif"
-              >FOUNDER</a
+              >Gründerin</a
             >
             <a
               href="#values"
               class="nav-link text-sm tracking-wider hover:text-cyan-400 transition-colors"
               style="font-family: 'Rajdhani', sans-serif"
-              >VALUES</a
+              >Werte</a
             >
             <a
               href="#services"
               class="nav-link text-sm tracking-wider hover:text-cyan-400 transition-colors"
               style="font-family: 'Rajdhani', sans-serif"
-              >SERVICES</a
+              >Dienstleistungen</a
             >
             <a
               href="#manifest"
               class="nav-link text-sm tracking-wider hover:text-cyan-400 transition-colors"
               style="font-family: 'Rajdhani', sans-serif"
-              >MANIFEST</a
+              >Philosophie</a
             >
           </div>
         </div>
@@ -1114,14 +1115,14 @@
             class="text-[#24ff00] text-sm tracking-[0.2em] uppercase mb-4 block"
             style="font-family: 'Rajdhani', sans-serif"
           >
-            MANIFESTO</span
+            Delulu Philosophie</span
           >
           <h2
             id="manifest-title"
             class="text-4xl sm:text-5xl font-black text-gradient mb-16"
             style="font-family: 'Orbitron', sans-serif"
           >
-            Delulu Manifest
+            Delulu Philosophie
           </h2>
           <div class="space-y-8">
             <div
@@ -1198,9 +1199,9 @@
                 class="text-xl sm:text-2xl font-semibold text-gradient mt-8"
                 style="font-family: 'Orbitron', sans-serif"
               >
-                🚀 We dream in pixels.<br />
-                We build with purpose.<br />
-                We slay with love. 💖
+                🚀 Wir träumen in Pixeln.<br />
+                Wir bauen mit Sinn.<br />
+                Wir sind voller Liebe. 💖
               </p>
             </div>
           </div>
@@ -1210,128 +1211,13 @@
                 class="bg-[#1800ad] px-12 py-5 text-xl font-bold tracking-wider hover:bg-[#e3ff00]/10 transition-all glitch-hover"
                 style="font-family: 'Orbitron', sans-serif"
               >
-                JOIN THE FUTURE
+                GESTALTE DIE ZUKUNFT
               </button>
             </div>
           </div>
         </div>
       </section>
-      <!-- Chatbot Widget -->
-      <div id="chatbot-widget" class="fixed bottom-6 right-6 z-50">
-        <!-- Chat Button -->
-        <button
-          id="chat-toggle"
-          class="w-16 h-16 rounded-full bg-gradient-to-br from-pink-500 to-purple-600 flex items-center justify-center shadow-[0_0_30px_rgba(236,72,153,0.6)] hover:shadow-[0_0_50px_rgba(236,72,153,0.8)] transition-all hover:scale-110 glitch-hover"
-        >
-          <span class="text-3xl">🤖</span>
-        </button>
-        <!-- Chat Window -->
-        <div
-          id="chat-window"
-          class="hidden absolute bottom-20 right-0 w-96 h-[600px] bg-[#0a0a0f] border-2 border-pink-500/50 rounded-lg shadow-[0_0_40px_rgba(236,72,153,0.4)] flex flex-col overflow-hidden"
-        >
-          <!-- Chat Header -->
-          <div
-            class="bg-gradient-to-r from-pink-600 to-purple-600 p-4 flex items-center justify-between"
-          >
-            <div class="flex items-center gap-3">
-              <span class="text-2xl">🤖</span>
-              <div>
-                <h3
-                  class="font-bold text-white"
-                  style="font-family: 'Orbitron', sans-serif"
-                >
-                  Delulu Bot
-                </h3>
-                <p
-                  class="text-xs text-pink-200"
-                  style="font-family: 'Rajdhani', sans-serif"
-                >
-                  IA Assistant
-                </p>
-              </div>
-            </div>
-            <button
-              id="chat-close"
-              class="text-white hover:text-pink-200 transition-colors"
-            >
-              <span class="text-2xl">×</span>
-            </button>
-          </div>
-          <!-- Chat Messages -->
-          <div
-            id="chat-messages"
-            class="flex-1 overflow-y-auto p-4 space-y-4"
-            style="font-family: 'Rajdhani', sans-serif"
-          >
-            <div class="flex gap-2 items-start">
-              <span class="text-2xl flex-shrink-0">🤖</span>
-              <div
-                class="bg-pink-500/20 border border-pink-500/30 rounded-lg p-3 max-w-[80%]"
-              >
-                <p class="text-sm text-gray-200">
-                  ¡Hola! Soy el
-                  <span class="text-pink-400 font-bold">Delulu Bot</span>. 💖
-                </p>
-                <p class="text-sm text-gray-200 mt-2">
-                  Pregúntame sobre nuestro studio, servicios, valores o la
-                  fundadora Índigo. ✨
-                </p>
-              </div>
-            </div>
-          </div>
-          <!-- Quick Questions -->
-          <div
-            id="quick-questions"
-            class="px-4 py-2 border-t border-pink-500/20"
-          >
-            <p
-              class="text-xs text-gray-400 mb-2"
-              style="font-family: 'Rajdhani', sans-serif"
-            >
-              Schnelle Fragen:
-            </p>
-            <div class="flex flex-wrap gap-2">
-              <button
-                class="quick-q text-xs px-3 py-1 bg-pink-500/10 border border-pink-500/30 rounded-full hover:bg-pink-500/20 transition-colors text-pink-300"
-                data-q="Was ist Delulu?"
-              >
-                Was ist Delulu?
-              </button>
-              <button
-                class="quick-q text-xs px-3 py-1 bg-purple-500/10 border border-purple-500/30 rounded-full hover:bg-purple-500/20 transition-colors text-purple-300"
-                data-q="Wer ist Índigo?"
-              >
-                Wer ist Índigo?
-              </button>
-              <button
-                class="quick-q text-xs px-3 py-1 bg-cyan-500/10 border border-cyan-500/30 rounded-full hover:bg-cyan-500/20 transition-colors text-cyan-300"
-                data-q="Welche Services bietet ihr an?"
-              >
-                Services
-              </button>
-            </div>
-          </div>
-          <!-- Chat Input -->
-          <div class="border-t-2 border-pink-500/30 p-4">
-            <form id="chat-form" class="flex gap-2">
-              <input
-                type="text"
-                id="chat-input"
-                placeholder="Schreib deine Frage..."
-                class="flex-1 bg-[#1a1a2e] border border-pink-500/30 rounded-lg px-4 py-2 text-white text-sm focus:outline-none focus:border-pink-500 transition-colors"
-                style="font-family: 'Rajdhani', sans-serif"
-              />
-              <button
-                type="submit"
-                class="bg-gradient-to-r from-pink-500 to-purple-600 rounded-lg px-4 py-2 hover:shadow-[0_0_20px_rgba(236,72,153,0.5)] transition-all"
-              >
-                <span class="text-xl">📤</span>
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
+
       <!-- Footer -->
       <footer
         class="relative py-20 px-6 bg-gradient-to-b from-[#1800ad]/20 to-[#1800ad]/60 border-t-4 border-[#24ff00]"
@@ -1426,13 +1312,13 @@
               class="text-base text-gray-200"
               style="font-family: 'Rajdhani', sans-serif"
             >
-              © 2025 Delulu Future Dev. All rights reserved.
+              © 2025 Delulu Future Dev. Alle Rechte vorbehalten.
             </p>
             <p
               class="text-sm text-[#e3ff00]"
               style="font-family: 'Rajdhani', sans-serif"
             >
-              Crafted with 💖 and a little bit of delulu energy
+              Mit Liebe gemacht 💖 und einer Prise verrückter Energie
             </p>
           </div>
         </div>
